# HW_WEB5

./: README.md  pyproject.toml
currency_web_chat/: Dockerfile  get_currency.py  main.css  names.py  pyproject.toml  requirements.txt  server.py
tests/: app_socket.py  serv_socket.py  server.py
