[tool.poetry]
name = "currency-web-chat"
version = "0.2.1"
description = "You can use web chat and get_currency"
authors = ["Denko <officedenko@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
